<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_sms_title" />


    <!-- 选择联系人 -->

    <Button
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/select" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputNumber"
            android:inputType="number" >
        </EditText>

        <ImageButton
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_right_unfold" />
    </LinearLayout>

    <!-- 来电弹窗 -->

    <Button
        android:id="@+id/ringing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ringing" />

    <Button
        android:id="@+id/idle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idle" />
</LinearLayout>